--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,10 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	justify-content: center;
-	min-height: 100vh;
+	flex-direction: column;
+	justify-content: flex-start;
+	min-height: 70vh;
+	background-color: rgb(12, 22, 34);
 }
 
 .img-responsive {
@@ -46,6 +48,156 @@ body {
 	width: 100%;
 }
 
+.hidden {
+	display: none;
+}
+
 #count-container {
 	display: none;
+}
+
+main {
+	margin-top: 2.5rem;
+	color: white;
+	font-size: 1.5rem;
+}
+
+.main-title {
+	font-size: 4.5rem;
+}
+
+.section-seasons {
+	margin-top: 1rem;
+}
+
+.choice-title {
+	margin-bottom: 1rem;
+}
+
+input[type="radio"] {
+	display: none;
+}
+
+label {
+	margin-top: 10px;
+	position: relative;
+	cursor: pointer;
+	color: "white";
+	padding: 2px 10px;
+}
+
+input[type="radio"]:checked + label {
+	background-color: white;
+	color: rgb(12, 22, 34);
+}
+
+.checkboxes {
+	overflow: hidden;
+	border: solid 2px white;
+	display: inline-block;
+	border-radius: 0.5rem;
+}
+
+.container {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	position: absolute;
+	justify-content: space-evenly;
+	margin-top: 2.5rem;
+	font-size: 1.5rem;
+}
+
+.big-text {
+	font-size: 2.9rem;
+	line-height: 1;
+	margin: 0 4rem;
+}
+
+.countdown-el {
+	text-align: center;
+}
+
+.btn-selector {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.small-icon {
+	margin-top: 2px;
+	height: 80%;
+}
+
+.btn {
+	color: white;
+	background-color: rgb(12, 22, 34);
+	border: 2px solid white;
+	border-radius: 0.5rem;
+	font-size: 1.5rem;
+	font-weight: 800;
+	letter-spacing: 2px;
+	line-height: 40px;
+	transition: .2s all fade-in;
+	height: 45px;
+	width: 100%;
+	max-width: 182.5px;
+	margin-bottom: 1.25rem;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	box-shadow: 0 5px 5px 0 rgba(255, 255, 255, 0.274);
+}
+
+.btn:disabled {
+	text-decoration: line-through 3px;
+	background-color: rgb(14, 10, 46);
+	border: 0.5px solid white;
+	box-shadow: 0 0px 0px 0 rgba(255, 255, 255, 0.274);
+}
+
+.btn:focus {
+	transform: scale(1.04);
+	background-color: white;
+	color: rgb(12, 22, 34);
+	border: 2px solid rgb(12, 22, 34);
+}
+
+.btn:hover:enabled {
+	transform: scale(1.04);
+}
+
+/*
+.btn-summer {
+	background-color: rgb(255, 157, 65);
+	border: solid 3px rgb(255, 123, 0);
+	box-shadow: 0 10px 20px 0 rgba(255, 123, 0, 0.425);
+	border-radius: 0.5rem;
+}
+
+.fall-btn {
+	background-color: #cfad80;
+	border: solid 3px rgb(126, 1, 1);
+	box-shadow: 0 10px 20px 0 rgba(126, 1, 1, 0.425);
+	border-radius: 0.5rem;
+}
+
+.winter-btn {
+	background-color: rgb(204, 243, 253);
+	border: solid 3px rgb(37, 211, 255);
+	box-shadow: 0 10px 20px 0 rgba(37, 211, 255, 0.274);
+	border-radius: 0.5rem;
+}
+
+.spring-btn {
+	background-color: rgb(255, 192, 245);
+	border: solid 3px rgb(255, 117, 243);
+	box-shadow: 0 10px 20px 0 rgba(255, 117, 243, 0.274);
+	border-radius: 0.5rem;
+}
+*/
+.images {
+	border: 4px white solid;
+	border-radius: 0.5rem;
+	overflow: hidden;
 }
