--- a/css/style.css
+++ b/css/style.css
@@ -164,38 +164,10 @@ input[type="radio"]:checked + label {
 }
 
 .btn:hover:enabled {
+	cursor: pointer;
 	transform: scale(1.04);
 }
 
-/*
-.btn-summer {
-	background-color: rgb(255, 157, 65);
-	border: solid 3px rgb(255, 123, 0);
-	box-shadow: 0 10px 20px 0 rgba(255, 123, 0, 0.425);
-	border-radius: 0.5rem;
-}
-
-.fall-btn {
-	background-color: #cfad80;
-	border: solid 3px rgb(126, 1, 1);
-	box-shadow: 0 10px 20px 0 rgba(126, 1, 1, 0.425);
-	border-radius: 0.5rem;
-}
-
-.winter-btn {
-	background-color: rgb(204, 243, 253);
-	border: solid 3px rgb(37, 211, 255);
-	box-shadow: 0 10px 20px 0 rgba(37, 211, 255, 0.274);
-	border-radius: 0.5rem;
-}
-
-.spring-btn {
-	background-color: rgb(255, 192, 245);
-	border: solid 3px rgb(255, 117, 243);
-	box-shadow: 0 10px 20px 0 rgba(255, 117, 243, 0.274);
-	border-radius: 0.5rem;
-}
-*/
 .images {
 	border: 4px white solid;
 	border-radius: 0.5rem;
