--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+	color: white;
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 	font-weight: 400;
@@ -20,7 +21,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	justify-content: flex-start;
-	min-height: 70vh;
+	min-height: 100vh;
 	background-color: rgb(12, 22, 34);
 }
 
@@ -106,6 +107,7 @@ input[type="radio"]:checked + label {
 	justify-content: space-evenly;
 	margin-top: 2.5rem;
 	font-size: 1.5rem;
+	margin-bottom: 2.5rem;
 }
 
 .big-text {
@@ -122,11 +124,6 @@ input[type="radio"]:checked + label {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-}
-
-.small-icon {
-	margin-top: 2px;
-	height: 80%;
 }
 
 .btn {
@@ -172,4 +169,119 @@ input[type="radio"]:checked + label {
 	border: 4px white solid;
 	border-radius: 0.5rem;
 	overflow: hidden;
+}
+
+footer {
+	align-items: center;
+	margin-top: 1rem;
+	position: absolute;
+	top: 0;
+}
+
+/******** Responsive Design ********/
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 768px) {
+	.main-title {
+		font-size: 4rem;
+	}
+
+	.btn-selector {
+		padding: 20px;
+	}
+
+	.btn {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+		max-width: 10.5rem;
+	}
+
+	.img-content {
+		padding: 20px;
+	}
+	.container {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		margin-left: 0.8rem;
+	}
+}
+
+@media screen and (max-width: 425px) {
+	.img-content {
+		display: block;
+		align-items: center;
+		width: 425px;
+		height: 300px;
+	}
+	.img-content.images {
+		width: 100%;
+		height: 100%;
+	}
+
+	.btn {
+		max-width: 46%;
+	}
+	.btn-selector {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+	}
+
+	.countdown-el p {
+		width: 78px;
+		text-align: left;
+	}
+
+	.big-text {
+		font-size: 2.9rem;
+	}
+
+	.container {
+		margin-top: -0.5rem;
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 10rem;
+	}
+	.countdown-el {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		width: 100%;
+		justify-content: left;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	.img-content {
+		width: 375px;
+		height: 300px;
+	}
+	.img-content.images {
+		width: 100%;
+		height: 100%;
+	}
+
+	.btn-selector {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+	}
+
+	.btn {
+		max-width: 47%;
+	}
+
+	.big-text {
+		font-size: 2.9rem;
+	}
+
+	.container {
+		display: flex;
+		flex-direction: column;
+	}
 }
